--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,60 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
-  background-color: tan;
+  color: white;
 }
-#navbar {
-	position: fixed;
+h1 {
+  font-size: 6rem;
+  text-align: center;
 }
-#welcome-section{
-	height: 100vh
+ul {
+  list-style: none;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  background: red;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: flex-end;
+  left: 0;
+  position: fixed;
+  width: 100%;
+}
+.nav-list {
+  display: flex;
+  margin-right: 2rem;
+}
+.nav-list a {
+  display: block;
+  font-size: 2.2rem;
+  padding: 2rem;
+}
+
+#welcome-section {
+  align-items: center;
+  background-color: #000;
+  height: 100vh;
+  justify-content: center;
+  width: 100%;
+}
+#welcome-section h1 {
+  text-align: center;
+}
+
+@media (max-width: 28.75em) {
+  nav {
+    justify-content: center;
+  }
 }
